# Schaken

./: CMakeLists.txt  Positie.cpp  Positie.h  SchaakStuk.cpp  SchaakStuk.h  chessboard.cpp  chessboard.h  game.cpp  game.h  mainwindow.cpp  mainwindow.h  resources.h
